# 113-spring-software-testing-hw2

./: pyproject.toml
.github/workflows/: app.yml
calc/: Calc.py
tests/: test_calc.py
