[project]
name = "113-spring-software-testing-hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest-cov>=6.1.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "."
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
